Fix overlapping book list items

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -235,6 +235,7 @@ p code {
 }
 
 .article.in-list {
+  overflow: hidden;
   margin-bottom: var(--space-3);
 }
 
